--- a/dev/scss/base/_base.scss
+++ b/dev/scss/base/_base.scss
@@ -93,12 +93,26 @@ ul {
 				display: grid;
 				grid-template-columns: 50% auto;
 				align-items: right;
+
+				.circlepic {
+					display: flex;
+					justify-content: flex-end;
+					align-items: flex-start;
+					margin-right: 17px;
+				}
 			}
 
 			.philosophy {
 				display: grid;
 				grid-template-columns: 50% auto;
 				align-items: right;
+
+				.circlepic {
+					display: flex;
+					justify-content: flex-end;
+					align-items: flex-start;
+					margin-right: 17px;
+				}
 			}		
 
 			@include md {
